--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -2,12 +2,27 @@
   <div class="row">
     <div class="col-xs-12 text-right p-b-10">
       <span class="p-r-5">
+        <span (click)="selectCurrency()" class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select Currency</span>
         <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="sendDataBack()" type="button">Back</button>
       </span>
       <span>
         <button mat-raised-button [disabled]="!materialForms.valid" matStepperNext (click)="materialAdded()" class="main-background-color main-button color-white">
           Next
         </button>
+      </span>
+    </div>
+    <div class="col-xs-12 p-t-10 p-b-20 text-right" *ngIf="poCurrency && poCurrency.exchangeCurrencyName != null">
+      <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+        <span class="font-size-vary-grn color-grey">
+          <img width="25px" *ngIf="poCurrency.exchangeCurrencyFlag" [src]="poCurrency.exchangeCurrencyFlag" />
+          {{ poCurrency.exchangeCurrencyName }}
+        </span>
+        <span class="p-l-5"> = </span>
+        <span class="p-l-5 color-6d6a6a color-grey"> {{ poCurrency.exchangeValue }} </span>
+        <span class="p-l-5 color-grey">
+          <img width="25px" *ngIf="poCurrency.primaryCurrencyFlag" [src]="poCurrency.primaryCurrencyFlag" />
+          {{ poCurrency.primaryCurrencyName }}
+        </span>
       </span>
     </div>
   </div>
