--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -4,7 +4,11 @@
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-12">
           <span>
-            <button mat-raised-button class="main-background-color main-button color-white pull-right">
+            <button
+              mat-raised-button
+              class="main-background-color main-button color-white pull-right"
+              [disabled]="getFormValidation() ? (getFormQtyValidation() ? true : false) : true"
+            >
               Create P.O
             </button>
           </span>
