--- a/src/app/shared/dialogs/tax-cost/tax-cost.component.html
+++ b/src/app/shared/dialogs/tax-cost/tax-cost.component.html
@@ -53,7 +53,7 @@
                         </p>
                     </div>
                 </mat-tab>
-                <mat-tab label="Other Cots" class="addressDialog">
+                <mat-tab label="Other Costs" class="addressDialog">
                     <div formArrayName="otherCostInfo">
                         <div *ngFor="let tax of taxCostForm.get('otherCostInfo')['controls']; let i = index"
                             class="float-left w-95">
