--- a/src/app/shared/dialogs/tax-cost/tax-cost.component.html
+++ b/src/app/shared/dialogs/tax-cost/tax-cost.component.html
@@ -1,7 +1,7 @@
 <div class="header-add-edit-dialog p-r-0">
     <div class="row p-10 width-100">
         <div class="col-xs-10">
-            <ng-container *ngIf="data.type === 'texesAndCost'">
+            <ng-container *ngIf="data.type === 'taxesAndCost'">
                 <h1 mat-dialog-title>Add taxes & costs</h1>
             </ng-container>
             <ng-container *ngIf="data.type === 'otherCost'">
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-<ng-container *ngIf="data.type === 'texesAndCost'">
+<ng-container *ngIf="data.type === 'taxesAndCost'">
     <form *ngIf="taxCostForm" [formGroup]="taxCostForm" (submit)="onSubmitTaxCost()">
         <div mat-dialog-content class="overflow-remove tx-cst">
             <mat-tab-group>
