--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -326,3 +326,8 @@ s .validTill {
 .no-terms-window {
   min-height: 100px;
 }
+
+.taxButton {
+  white-space: normal !important;
+  line-height: initial !important;
+}
