--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -1,103 +1,119 @@
-
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()" class="add-edit-user-modal-form">
- <div class="header-add-edit-dialog row">
-      <h1 mat-dialog-title>User Details</h1>
-      <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
-        <span aria-hidden="true">×</span>
-      </button>
+  <div class="header-add-edit-dialog row">
+    <h1 mat-dialog-title>User Details</h1>
+    <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
   </div>
-      <!-- new structure -->
-        <!-- first row -->
-        <div class="row">
-          <div class="col-xs-12 col-sm-12">
-            <!-- project Name -->
-          <mat-form-field class="border-input add-edit-user-form-modal">
-          <input
-            matInput
-            type="text"
-            placeholder="First Name"
-            formControlName="firstName" required
-          />
-          <mat-error class="mat-error-add-edit-form-modal">First Name is Required</mat-error>
-        </mat-form-field>
+  <!-- new structure -->
+  <!-- first row -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-12">
+      <!-- project Name -->
+      <mat-form-field class="border-input add-edit-user-form-modal">
+        <input matInput type="text" placeholder="First Name" formControlName="firstName" required />
+        <mat-error class="mat-error-add-edit-form-modal">First Name is Required</mat-error>
+      </mat-form-field>
+    </div>
+  </div>
+  <!-- second row -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-12">
+
+      <mat-form-field class="border-input add-edit-user-form-modal">
+        <input matInput type="text" placeholder="Last Name" formControlName="lastName" required />
+        <mat-error class="mat-error-add-edit-form-modal">Last Name is Required</mat-error>
+      </mat-form-field>
+    </div>
+
+  </div>
+  <!-- third row -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-12">
+      <!-- address 1 -->
+      <mat-form-field class="border-input add-edit-user-form-modal">
+        <input matInput type="text" placeholder="Email Id" formControlName="email" (input)="verifyEmail($event)"
+          required />
+        <!-- <mat-error class="mat-error-add-edit-form-modal">Email Id is Required</mat-error> -->
+        <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
+          class="form-error-msg"> Email is required </small>
+        <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
+          class="form-error-msg"> Enter Valid Email</small>
+        <small class="form-error-msg" *ngIf="(!emailVerified)">Email already in use.</small>
+      </mat-form-field>
+    </div>
+  </div>
+  <!-- fourth row -->
+  <div class="row">
+
+    <div class="col-xs-4 col-sm-4">
+
+      <mat-form-field class="border-select mat-form-field-flex-mm-padding">
+        <mat-select formControlName="countriesList">
+          <div class="display-flex">
+            <input
+              class="p-l-10 p-b-5"
+              matInput
+              type="search"
+              placeholder="Search Country"
+              [(ngModel)]="searchCountry"
+              [ngModelOptions]="{standalone: true}"
+              (keydown)="$event.stopPropagation()"
+            />
+            <button mat-button matSuffix mat-icon-button>
+              <mat-icon>search</mat-icon>
+            </button>
           </div>
-        </div>
-        <!-- second row -->
-        <div class="row">
-          <div class="col-xs-12 col-sm-12">
-            
-        <mat-form-field class="border-input add-edit-user-form-modal">
-          <input
-            matInput
-            type="text"
-            placeholder="Last Name"
-            formControlName="lastName" required
-          />
-          <mat-error class="mat-error-add-edit-form-modal">Last Name is Required</mat-error>
-        </mat-form-field>
-          </div>
-        
-        </div>
-        <!-- third row -->
-        <div class="row">
-          <div class="col-xs-12 col-sm-12">
-            <!-- address 1 -->
-       <mat-form-field class="border-input add-edit-user-form-modal">
-          <input
-            matInput
-            type="text"
-            placeholder="Email Id"
-            formControlName="email" (input)="verifyEmail($event)" required
-          />
-          <!-- <mat-error class="mat-error-add-edit-form-modal">Email Id is Required</mat-error> -->
-           <small
-              *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
-              class="form-error-msg"> Email is required </small>
-              <small
-              *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
-              class="form-error-msg"> Enter Valid Email</small>
-               <small class="form-error-msg" *ngIf="(!emailVerified)">Email already in use.</small>
-        </mat-form-field>
-          </div>
-        </div>
-        <!-- fourth row -->
-         <div class="row">
-          <div class="col-xs-12 col-sm-12">
-           <!-- PinCode -->
-        <mat-form-field class="border-input add-edit-user-form-modal">
-          <input
-            matInput
-            type="text"
-            placeholder="Phone No"
-            formControlName="contactNo"/>
-              <small
-              *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
-              class="form-error-msg"> Enter Valid Phone No</small>
-        </mat-form-field>
-          </div>
-        </div>
+          <mat-select-trigger>
+            <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
+              ><img class="w-15 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+              <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
+              <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+            </span>
+          </mat-select-trigger>
+          <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country" selected="trade.isAttatched"
+            ><span
+              ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+              <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
+              <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+            </span>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
 
 
-        <!-- fifth row -->
-        <div class="row">
-          <div class="col-xs-12 col-sm-12">
-           <!-- city -->
-            <mat-form-field class="border-select add-edit-user-form-modal">
-              <mat-label>Role *</mat-label>
-                <mat-select formControlName="roleId">
-                  <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
-                    {{role.roleDescription}}
-                  </mat-option>
-                </mat-select>
-            </mat-form-field>
-          </div>
-        </div>
+    <div class="col-xs-8 col-sm-8">
+      <!-- PinCode -->
+      <mat-form-field class="border-input add-edit-user-form-modal">
+        <input matInput type="text" placeholder="Phone No" formControlName="contactNo" />
+        <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
+          class="form-error-msg"> Enter Valid Phone No</small>
+      </mat-form-field>
+    </div>
+  </div>
 
-         <!-- sixth row -->
-         <div class="row">
-          <div class="col-xs-12 col-sm-12">
-           <!-- project unit -->
-        <!-- <mat-form-field class="border-select add-edit-user-form-modal">
+
+  <!-- fifth row -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-12">
+      <!-- city -->
+      <mat-form-field class="border-select add-edit-user-form-modal">
+        <mat-label>Role *</mat-label>
+        <mat-select formControlName="roleId">
+          <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
+            {{role.roleDescription}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <!-- sixth row -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-12">
+      <!-- project unit -->
+      <!-- <mat-form-field class="border-select add-edit-user-form-modal">
           <mat-label>Project</mat-label>
           <mat-select formControlName="project">
             <mat-option *ngFor="let unit of units" [value]="unit.value">
@@ -108,26 +124,25 @@
 
         .... -->
 
-        <mat-form-field class="border-select add-edit-user-form-modal">
-          <mat-label>Project</mat-label>
-          <mat-select formControlName="projectIds" multiple>
-            <mat-option *ngFor="let project of allProjects" [value]="project.projectId">{{project.projectName}}</mat-option>
-          </mat-select>
-        </mat-form-field>
+      <mat-form-field class="border-select add-edit-user-form-modal">
+        <mat-label>Project</mat-label>
+        <mat-select formControlName="projectIds" multiple>
+          <mat-option *ngFor="let project of allProjects" [value]="project.projectId">{{project.projectName}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
 
-          </div>
+    </div>
 
-        </div>
-     
-      <!-- end structure -->
-    
+  </div>
+
+  <!-- end structure -->
+
   <div mat-dialog-actions>
     <div class="col-xs-12 col-sm-12 save-btn-add-edit-user-modal">
-      <button
-        mat-raised-button [disabled]="!form.valid || !emailVerified" (click)="userDetailsNavigate()"
-        class="main-background-color main-button color-white pull-right"
-      >
+      <button mat-raised-button [disabled]="!form.valid || !emailVerified" (click)="userDetailsNavigate()"
+        class="main-background-color main-button color-white pull-right">
         <span *ngIf="!data.isEdit">Add</span>
         <span *ngIf="data.isEdit">Save</span>
       </button>
