--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -26,14 +26,54 @@
         </mat-form-field>
       </div>
 
-      <div class="col-xs-12 display-flex supplier-dialog">
-        <mat-form-field class="border-input">
-          <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
-          <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
-            class="form-error-msg"> Phone No is required </small>
-          <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched"
-            class="form-error-msg"> Enter Valid Phone No</small>
-        </mat-form-field>
+      <div class="col-xs-12 display-flex supplier-dialog pl-0 pr-0">
+
+        <div class="col-xs-4">
+
+          <mat-form-field class="border-select mat-form-field-flex-mm-padding">
+            <mat-select formControlName="countryCode">
+              <div class="display-flex">
+                <input
+                  class="p-l-10 p-b-5"
+                  matInput
+                  type="search"
+                  placeholder="Search Country"
+                  [(ngModel)]="searchCountry"
+                  [ngModelOptions]="{standalone: true}"
+                  (keydown)="$event.stopPropagation()"
+                />
+                <button mat-button matSuffix mat-icon-button>
+                  <mat-icon>search</mat-icon>
+                </button>
+              </div>
+              <mat-select-trigger>
+                <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
+                  ><img class="w-15 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                  <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                  <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                </span>
+              </mat-select-trigger>
+              <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country" selected="trade.isAttatched"
+                ><span
+                  ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                  <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
+                  <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                </span>
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col-xs-8">
+          <mat-form-field class="border-input">
+            <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
+            <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
+              class="form-error-msg"> Phone No is required </small>
+            <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched"
+              class="form-error-msg"> Enter Valid Phone No</small>
+          </mat-form-field>
+        </div>
+
       </div>
 
       <!-- <div class="col-xs-12 display-flex supplier-dialog">
